HW/HW1/results/budhanbrandon_results.txt
HW\HW1\test\Tester.java:17: error: cannot find symbol
		System.out.println("length of seg: " + seg.GetLength());
		                                          ^
  symbol:   method GetLength()
  location: variable seg of type Segment
1 error
